# defm

./: .gitignore  .pre-commit-config.yaml  README.md  hubconf.py  pyproject.toml  requirements.txt  setup.py
defm/: __init__.py  model_factory.py
defm/configs/: defm_efficientnet_b0.yaml  defm_efficientnet_b2.yaml  defm_efficientnet_b4.yaml  defm_efficientnet_b6.yaml  defm_regnet_y_1_6gf.yaml  defm_regnet_y_400mf.yaml  defm_regnet_y_800mf.yaml  defm_resnet18.yaml  defm_resnet34.yaml  defm_resnet50.yaml  defm_vit_l14.yaml  defm_vit_s14.yaml
defm/layers/: __init__.py  attention.py  block.py  dino_head.py  drop_path.py  layer_scale.py  mlp.py  patch_embed.py  swiglu_ffn.py
defm/models/: __init__.py  bifpn.py  efficientnet_bifpn.py  regnet_bifpn.py  resnet_bifpn.py  vision_transformer.py
defm/utils/: __init__.py  utils.py
notebooks/: inference_convnet.ipynb  inference_vit.ipynb  pca_examples.ipynb
scripts/notebooks/: inference_convnet.ipynb  inference_vit.ipynb  pca_examples.ipynb
