[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defm"
version = "0.1.0"
description = "DeFM: Learning Foundation Representations from Depth for Robotics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy<2.0.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "scikit-learn>=1.7.2",
    "torch>=2.0.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
include = ["defm", "defm.*"]