[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defm"
version = "0.1.0"
description = "DeFM: Learning Foundation Representations from Depth for Robotics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "huggingface-hub>=0.36.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "numpy<2.0.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "scikit-learn>=1.3.2",
    "torch>=2.0.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
include = ["defm", "defm.*"]